[gd_scene load_steps=6 format=2]

[ext_resource path="res://data/themes/menu_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/2d/pot_energy/world.gd" type="Script" id=2]

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( -1000, -1000 )
b = Vector2( 1000, 1000 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2000, 30 )

[sub_resource type="CircleShape2D" id=3]
radius = 50.0

[node name="world" type="Node2D"]
script = ExtResource( 2 )

[node name="ground" type="StaticBody2D" parent="."]
position = Vector2( 0, -1080 )

[node name="polygon" type="Polygon2D" parent="ground"]
color = Color( 0.180392, 0.180392, 0.180392, 1 )
polygon = PoolVector2Array( -1990, -910, 0, 1080, 4000, 1080, 4000, 1680, -1990, 1680 )

[node name="diagonal_shape" type="CollisionShape2D" parent="ground"]
position = Vector2( -990, 90 )
shape = SubResource( 4 )

[node name="rectangular_shape" type="CollisionShape2D" parent="ground"]
position = Vector2( 2000, 1110 )
shape = SubResource( 2 )

[node name="overview_camera" type="Camera2D" parent="."]
position = Vector2( 850, -960 )
zoom = Vector2( 3, 3 )

[node name="ball" type="RigidBody2D" parent="."]
position = Vector2( -1880, -1950 )
mass = 10.0

[node name="shape" type="CollisionShape2D" parent="ball"]
shape = SubResource( 3 )

[node name="polygon" type="Polygon2D" parent="ball"]
color = Color( 1, 0.454902, 0.454902, 0.784314 )
antialiased = true
polygon = PoolVector2Array( 0, -50, 30, -40, 40, -30, 50, -10, 50, 0, 40, 30, 30, 40, 10, 50, 0, 50, -30, 40, -40, 30, -50, 10, -50, -10, -40, -30, -30, -40, -10, -50 )

[node name="camera" type="Camera2D" parent="ball"]
current = true

[node name="height_line" type="Line2D" parent="ball"]
points = PoolVector2Array( 0, 0 )
width = 20.0

[node name="label" type="Label" parent="ball/height_line"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ui_layer" type="CanvasLayer" parent="."]

[node name="menu" type="Control" parent="ui_layer"]
modulate = Color( 1, 1, 1, 0.784314 )
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="switch_camera_button" type="Button" parent="ui_layer/menu"]
margin_right = 310.0
margin_bottom = 89.0
text = "Switch Camera"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="values_textbox" type="TextEdit" parent="ui_layer/menu"]
margin_left = 540.0
margin_right = 1920.0
margin_bottom = 280.0
text = "m*g*h = m/2 * vÂ²"
readonly = true
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="distance_line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0 )
width = 20.0
default_color = Color( 0.4, 1, 0.705882, 1 )

[node name="label" type="Label" parent="distance_line"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="distance_ground_line" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0 )
width = 20.0
default_color = Color( 0.886275, 0.545098, 1, 1 )

[node name="label" type="Label" parent="distance_ground_line"]
margin_right = 40.0
margin_bottom = 14.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ui_layer/menu/switch_camera_button" to="." method="_on_switch_camera_button_pressed"]
